# Multi-Threaded-File-Server-with-Access-Control

./: .gitignore  CMakeLists.txt  README.md  run_client.sh  run_server.sh  todo.md
client/: CMakeLists.txt  client.c  client_file.txt  client_utils.c  client_utils.h  downloaded_file.txt  hello.txt  main.c  temp.txt  threaded_client  threaded_client.c
server/: CMakeLists.txt  README.md  client_handler.c  client_handler.h  file_handler.c  file_handler.h  logger.c  logger.h  server.c  server.h  threaded_server  threaded_server.c  user_auth.c  user_auth.h  user_manager.c  users  users.txt
server/files/: README.md  sample.txt  sample1.txt
